# pretix-fsr-next-wallet

./: .update-locales.sh  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_fsr_next_wallet/: apps.py
pretix_fsr_next_wallet/locale/de_Informal/LC_MESSAGES/: django.po
