[project]
name = "pretix-fsr-next-wallet"
dynamic = ["version"]
description = "Allowing payments at VerDE events and at the student coffee machine powered by a pretix backend"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Ben Bals", email = "benbals@posteo.de"},
]
maintainers = [
    {name = "Ben Bals", email = "benbals@posteo.de"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_fsr_next_wallet = "pretix_fsr_next_wallet:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/benbals/pretix-fsr-next-wallet"
repository = "https://github.com/benbals/pretix-fsr-next-wallet"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_fsr_next_wallet.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
